# pixel-exchange-format

./: LICENSE  README.md
.github/workflows/: ci.yml
app/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
app/messages/: en.json  ja.json
app/project.inlang/: settings.json
app/src/: app.html  hooks.server.ts  hooks.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src/lib/: audioDecoder.svelte.ts  audioEncoder.svelte.ts  audioPlayer.svelte.ts  constants.ts  facebookRoundtrip.ts  imageUtils.ts  midiLoader.ts  transfer.svelte.ts
app/src/routes/: +layout.svelte  +layout.ts  +page.svelte  app.css
app/static/favicon/: site.webmanifest
cli/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
cli/src/: index.ts
cli/src/commands/: check.ts  decode.ts  encode.ts
cli/src/types/: pngjs.d.ts
cli/src/utils/: audioUtils.ts  fileUtils.ts  imageUtils.ts
codec/: SPECIFICATION.md  package.json  pnpm-lock.yaml  spec-builder.ts  tsconfig.json
codec/src/: buildInfo.md  buildInfo.ts  constants.md  constants.ts  index.md  index.ts  pipeline.test.ts  psychoacoustics.ts
codec/src/decoder/: audio.md  audio.ts  audioMath.md  audioMath.ts  binary.md  binary.ts  header.md  (+4 more)
doc/: EXPERIMENTS.md  README.md
doc/notes/: facebook-jpeg-probe.md
jpeg-decoder/: README.md  package.json  pnpm-lock.yaml
jpeg-decoder/src/: color.ts  dct.ts  decoder.ts  huffman.ts  index.ts  jpeg.ts  parser.ts
web/: package.json  pnpm-lock.yaml  svelte.config.js
(+91 files in other folders)
